# limou3434_practice-_repository

./: .gitignore  LeetCode_main_ListNode.c  README.md  foo.txt  function.c  function1  function2  index.html  limou_index.html  limou的论文收集.html  main1.c  main2.c  my_py_course_2022_12_24.py  my_py_course_2022_12_25.py  my_py_course_2022_12_27.py  my_web_2023_1_4.html  my_web_2023_1_7.html  my_web_2023_1_8.html  my_web_2023_3_2.html  test_code  text.txt  同步时序计数器（1-9）电路图纸 .ms14
2024归档/: my_code_2024_4_8.rar
2024归档/my_code_2024_7_2/: CMakeLists.txt  main.cpp  main.qml
2024归档/my_code_2024_7_5_test/: CMakeLists.txt  Main.qml  main.cpp
LiveGame/: live_game.py
MYFluentUITest/: CMakeLists.txt
MyFile_2023_10_1/: hard-link-2
MyFile_2023_9_14/: test.c
MyFile_2023_9_16/: test.c
MyFile_2023_9_17/: test.c
MyFile_2023_9_21/: limou.txt  main.c  test.txt
MyFile_2023_9_22/: error.txt  main.cpp
MyFile_2023_9_26/: test.c
MyTest/: test.html
MyTestUI-NoScaffold/: CMakeLists.txt  main.cpp
NewTest/: CMakeLists.txt
Nice/: CMakeLists.txt
QtDemo/: CMakeLists.txt  main.cpp
TEXT_code/: HelloWord.java
TinyIDE/: CMakeLists.txt
build-lexical_analyzer-Desktop_Qt_5_14_0_MinGW_64_bit-Debug/: .qmake.stash  Makefile  moc_mainwindow.cpp  ui_mainwindow.h
build-my_code_2024_2_29-Desktop_Qt_5_14_0_MinGW_64_bit-Debug/: Makefile  moc_widget.cpp  qrc_resource.cpp  ui_widget.h
build-my_code_2024_4_26-Desktop_Qt_5_14_0_MinGW_64_bit-Debug/: Makefile  moc_widget.cpp  ui_widget.h
build-my_code_2024_4_28-Desktop_Qt_5_14_0_MinGW_64_bit-Debug/: Makefile  moc_widget.cpp  ui_widget.h
build-my_code_2024_5_6-Desktop_Qt_5_14_0_MinGW_64_bit-Debug/: Makefile  moc_widget.cpp  qrc_resource.cpp  ui_widget.h
build-my_code_2024_5_7-Desktop_Qt_5_14_0_MinGW_64_bit-Debug/: Makefile  moc_widget.cpp  qrc_resource.cpp  ui_widget.h
build-my_code_2024_5_8-Desktop_Qt_5_14_0_MinGW_64_bit-Debug/: Makefile  moc_widget.cpp  ui_widget.h
file/: a.out  main1.c
lexical_analyzer/: lexical_analyzer.cpp  lexical_analyzer.h  lexical_analyzer.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
limou-c-test-code/: main.c  main.txt  my_leetcode_2023_3_16.txt  my_pad_2023_4_21.txt  my_pad_code_2023_4_22.txt  my_py_course_2022_12_22.py  my_py_course_2022_12_29.py  my_py_course_2022_12_30.py  my_py_course_2022_12_31.py  my_py_course_2023_3_1.py  my_web_2023_3_2.1.html  my_web_2023_3_5.1.html  py_main.py
my_code_1013_11_27.1/: a.out
my_code_11_10.1/: a.out  main.c
my_code_2023_10_14/: a.out  main.c
my_code_2023_10_17/: main.c
my_code_2023_10_26.1/: test.sh
my_code_2023_10_3/: a.out  function.hpp
my_code_2023_10_4/: ProcessPool.cpp  a.out  main.cpp
my_code_2023_10_7/: client  comm.hpp  makefile
my_code_2023_10_7.1/: comm.hpp  shmClient  shmClient.cpp  shmServer  shmServer.cpp
my_code_2023_10_9/: makefile  shmClient.cpp  shmServer.cpp
my_code_2023_11_1.1/: a.out  main.c
my_code_2023_11_20.1/: a.out  main.c
my_code_2023_11_29/: a.out  main.c  shell.c
my_code_2023_12_16.1/: comm.hpp  shmClient.cpp  shmServer.cpp
my_code_2023_12_20/: a.out
my_code_2023_12_22/: a.out  main.cpp
my_code_2023_12_24/: a.out  main.cpp  test.cpp
my_code_2023_12_27/: a.out  main.cpp
my_code_2023_12_28/: BlockingQueue.hpp  ConProd.cc  Makefile  Task.hpp  cp
my_code_2023_12_6/: a.out  file.c  file.h  main.c
my_code_2023_12_9/: a.out
my_code_2024_1_16.2/: test.html
my_code_2024_1_18/: test.py
my_code_2024_2_29/: widget.cpp  widget.ui
my_code_2024_3_28/: cal_client.cpp  cal_server.cpp  log.hpp  makefile  protocol.hpp  sock.hpp  tcp_server.hpp
my_code_2024_3_30/: http_server.cpp  http_server.hpp  makefile  sock.hpp  usage.hpp  util.hpp
my_code_2024_4_10/: sock.hpp
my_code_2024_4_11/: makefile
my_code_2024_4_12/: epoll.hpp  epoll_server.hpp  main.cpp  makefile
(+1579 files in other folders)
